<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:background="@color/red"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_title">

        <TextView
            android:id="@+id/toolbar_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reservation"
            android:layout_gravity="right"
            android:layout_marginRight="5pt"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/form_title"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:gravity="center_vertical"
        android:text="@string/form_title"
        android:textColor="@color/black"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:hint="@string/autoCompleteTextView"
        android:textColorHint="@color/gray"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_title" />

    <EditText
        android:id="@+id/form_distance"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/form_distance"
        android:inputType="numberDecimal"
        android:textColorHint="@color/gray"
        android:textSize="8pt"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <TextView
        android:id="@+id/form_category"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/form_category"
        android:textColor="@color/purple_200"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_distance" />

    <Spinner
        android:id="@+id/form_category_dropdown"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:entries="@array/categories"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_category" />

    <EditText
        android:id="@+id/form_location"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/form_location"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_category_dropdown" />

    <CheckBox
        android:id="@+id/form_autodetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_200"
        android:minHeight="48dp"
        android:text="@string/form_autodetect"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_location" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundshapebtn"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toTopOf="@+id/table_result"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_autodetect"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundshapebtn"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toTopOf="@+id/table_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_autodetect"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/table_result"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="500dp"
        android:gravity="center_vertical"
        android:text="@string/table_result"
        android:textColor="@color/black"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="No Results Found!"
        android:textColor="@color/red"
        android:textSize="8pt"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_result" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_table"
        android:layout_width="375dp"
        android:layout_height="307dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_result"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>